--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # default owners
-* @albrja @beatrixkh @hussain-jafari @mattkappel @ramittal @rmudambi @stevebachmeier
+* @albrja @beatrixkh @hussain-jafari @mattkappel @ramittal @rmudambi @stevebachmeier @patricktnast
