--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: ["3.8", "3.9", "3.10","3.11"]
     defaults:
       run:
         shell: bash -l {0}
@@ -79,6 +79,6 @@ jobs:
           pytest ./tests
       - name: Lint
         run: |
-          pip install black==22.1.0 isort
+          pip install black==22.3.0 isort
           black . --check -v
           isort . --check -v
