Don't stratify by sex

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -40,7 +40,7 @@ configuration:
     metrics:
         default:
             - 'age'
-            - 'sex'
+#             - 'sex'
             - 'year'
         # disability:
         #     include:
