--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -32,7 +32,7 @@ configuration:
             day: 3
         step_size: 7 # Days
     population:
-        population_size: 100000
+        population_size: 100_000
         age_start: 10
         age_end: 54
         include_sex: "Female"
@@ -40,7 +40,6 @@ configuration:
     metrics:
         default:
             - 'age'
-#             - 'sex'
             - 'year'
         # disability:
         #     include:
