Fix observer with specific disease

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -7,7 +7,7 @@ components:
 #            - DisabilityObserver()
             - MortalityObserver()
             - ResultsStratifier()
-            - DiseaseObserver()
+            - DiseaseObserver("pregnancy")
 
     # Causes an error if left empty. Uncomment when you have components. 
     # vivarium_gates_nutrition_optimization.components:
