--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -9,8 +9,9 @@ components:
             - ResultsStratifier()
             - DiseaseObserver("pregnancy")
 
-    # Causes an error if left empty. Uncomment when you have components. 
-    # vivarium_gates_nutrition_optimization.components:
+    vivarium_gates_nutrition_optimization:
+        components:
+            - Pregnancy()
 
 configuration:
     input_data:
