add accounting of full term births

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -12,6 +12,7 @@ components:
         components:
             - Pregnancy()
             - PregnancyObserver()
+            - BirthRecorder()
 
 configuration:
     input_data:
