--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -2,7 +2,7 @@ components:
     vivarium_public_health:
         population:
             - BasePopulation()
-
+            - Mortality()
         metrics:
 #            - DisabilityObserver()
             - MortalityObserver()
@@ -36,7 +36,7 @@ configuration:
             day: 3
         step_size: 7 # Days
     population:
-        population_size: 10_000
+        population_size: 100
         age_start: 10
         age_end: 54
         include_sex: "Female"
