start to add new transition fn

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -10,6 +10,7 @@ components:
     vivarium_gates_nutrition_optimization:
         components:
             - Pregnancy()
+            - MaternalDisorders()
             - PregnancyObserver()
             - BirthRecorder()
             - ResultsStratifier()
