add disability weighting

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -4,7 +4,7 @@ components:
             - BasePopulation()
             - Mortality()
         metrics:
-#            - DisabilityObserver()
+            - DisabilityObserver()
             - MortalityObserver()
 
     vivarium_gates_nutrition_optimization:
