add new maternalMortality comp

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -10,7 +10,7 @@ components:
         components:
             - Pregnancy()
             - MaternalDisorders()
-            - Mortality()
+            - MaternalMortality()
             - PregnancyObserver()
             - BirthRecorder()
             - ResultsStratifier()
