--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -4,13 +4,13 @@ components:
             - BasePopulation()
         metrics:
             - DisabilityObserver()
-            - MortalityObserver()
+            # - MortalityObserver()
 
     vivarium_gates_nutrition_optimization:
         components:
             - Pregnancy()
             - MaternalDisorders()
-            - MaternalMortality()
+            # - MaternalMortality()
             - PregnancyObserver()
             - BirthRecorder()
             - ResultsStratifier()
