add disease observer

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -3,8 +3,9 @@ components:
         population:
             - BasePopulation()
         metrics:
-#            - DisabilityObserver()
+            - DisabilityObserver()
             - MortalityObserver()
+            - DiseaseObserver("maternal_disorders")
 
     vivarium_gates_nutrition_optimization:
         components:
