--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -4,10 +4,10 @@ components:
             - BasePopulation()
         metrics:
             - DisabilityObserver()
-            - MortalityObserver()
-
+            - DiseaseObserver("maternal_disorders")
     vivarium_gates_nutrition_optimization:
         components:
+            - MaternalMortalityObserver()
             - Pregnancy()
             - MaternalDisorders()
             - MaternalMortality()
