--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -5,15 +5,17 @@ components:
         metrics:
             - DisabilityObserver()
             - DiseaseObserver("maternal_disorders")
+            - DiseaseObserver("maternal_hemorrhage")
     vivarium_gates_nutrition_optimization:
         components:
-            - MaternalMortalityObserver()
             - Pregnancy()
             - MaternalDisorders()
+            - MaternalHemorrhage()
             - MaternalMortality()
+            - ResultsStratifier()
             - PregnancyObserver()
             - BirthRecorder()
-            - ResultsStratifier()
+            - MaternalMortalityObserver()
 
 configuration:
     input_data:
