--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -5,20 +5,22 @@ components:
         metrics:
             - DisabilityObserver()
             - DiseaseObserver("maternal_disorders")
+            - DiseaseObserver("maternal_hemorrhage")
     vivarium_gates_nutrition_optimization:
         components:
-            - MaternalMortalityObserver()
             - Pregnancy()
             - MaternalDisorders()
+            - MaternalHemorrhage()
             - MaternalMortality()
+            - ResultsStratifier()
             - PregnancyObserver()
             - BirthRecorder()
-            - ResultsStratifier()
+            - MaternalMortalityObserver()
 
 configuration:
     input_data:
         input_draw_number: 0
-        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model2.0.1/ethiopia.hdf'
+        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model2.1/ethiopia.hdf'
     interpolation:
         order: 0
         extrapolate: True
