--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -11,6 +11,7 @@ components:
             - Pregnancy()
             - MaternalDisorders()
             - MaternalMortality()
+            - Hemoglobin()
             - PregnancyObserver()
             - BirthRecorder()
             - ResultsStratifier()
@@ -18,7 +19,7 @@ components:
 configuration:
     input_data:
         input_draw_number: 0
-        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model2.0.1/ethiopia.hdf'
+        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model3.0/ethiopia.hdf'
     interpolation:
         order: 0
         extrapolate: True
