add anemia even more

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -13,6 +13,7 @@ components:
             - MaternalHemorrhage()
             - MaternalMortality()
             - Hemoglobin()
+            - Anemia()
             - ResultsStratifier()
             - PregnancyObserver()
             - BirthRecorder()
