--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -51,6 +51,9 @@ configuration:
         pregnancy:
             include:
             - 'pregnancy_outcome'
+        anemia:
+            include:
+            - 'pregnancy'
         # disability:
         #     include:
         #     exclude:
