--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -11,6 +11,8 @@ components:
             - MaternalDisorders()
             - MaternalHemorrhage()
             - MaternalMortality()
+            - Hemoglobin()
+            - Anemia()
             - ResultsStratifier()
             - PregnancyObserver()
             - BirthRecorder()
@@ -21,7 +23,7 @@ components:
 configuration:
     input_data:
         input_draw_number: 0
-        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model2.1/ethiopia.hdf'
+        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model3.0/ethiopia.hdf'
     interpolation:
         order: 0
         extrapolate: True
@@ -37,7 +39,7 @@ configuration:
         end:
             year: 2025
             month: 12
-            day: 3
+            day: 31
         step_size: 7 # Days
     population:
         population_size: 10_000
