untrack not pregnant

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -8,6 +8,7 @@ components:
     vivarium_gates_nutrition_optimization:
         components:
             - Pregnancy()
+            - UntrackNotPregnant()
             - MaternalDisorders()
             - MaternalHemorrhage()
             - MaternalMortality()
