Move to new Results Management System (#42)
* update versions

* add anemia observer

* fix a couple typos

* fix typo

* lint

* update artifact

* better observer format

* help observers

* add untracked to hemo / anemia pipelines

* add tracked column

* adjust results processing

* remove unneeded imports

* change tag to todo

* remove pregnancy state subsetting

* update VPH version

* add ticket to TODOs

* uprev VPH

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -5,6 +5,7 @@ components:
         metrics:
             - DiseaseObserver("maternal_disorders")
             - DiseaseObserver("maternal_hemorrhage")
+
     vivarium_gates_nutrition_optimization:
         components:
             - Pregnancy()
@@ -48,9 +49,9 @@ configuration:
         age_end: 54
         include_sex: "Female"
 
-    observers:
+    stratification:
         default:
-            - 'age'
+            - 'age_group'
         pregnancy:
             include:
             - 'pregnancy_outcome'
