add bmi observer

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -22,6 +22,7 @@ components:
             - MaternalMortalityObserver()
             - DisabilityObserver()
             - AnemiaObserver()
+            - MaternalBMIObserver()
 
 configuration:
     input_data:
@@ -67,3 +68,6 @@ configuration:
         maternal_hemorrhage:
             include:
             - 'anemia_status_at_birth'
+        maternal_bmi:
+            include:
+            - 'pregnancy'
