--- a/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
@@ -2,6 +2,10 @@ input_draw_count: 10
 random_seed_count: 10
 
 branches:
-# TODO change to name of intervention
-  - placeholder_branch_name:
-      scenario: ['baseline']
+  - intervention:
+      scenario:
+        - 'baseline'
+        - 'mms'
+        - 'universal_bep'
+        - 'targeted_bep_no_mms'
+        - 'targeted_bep_mms'
