--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -63,6 +63,7 @@ configuration:
         anemia:
             include:
             - 'pregnancy'
+            - 'maternal_intervention'
         maternal_disorders:
             include:
             - 'anemia_status_at_birth'
