--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -24,6 +24,7 @@ components:
             - DisabilityObserver()
             - AnemiaObserver()
             - MaternalBMIObserver()
+            - MaternalInterventionObserver()
 
 configuration:
     input_data:
