--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -16,6 +16,7 @@ components:
             - Hemoglobin()
             - Anemia()
             - MaternalBMIExposure()
+            - MaternalInterventions()
             - ResultsStratifier()
             - PregnancyObserver()
             - BirthRecorder()
@@ -27,7 +28,7 @@ components:
 configuration:
     input_data:
         input_draw_number: 0
-        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model5.0/ethiopia.hdf'
+        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model6.0/ethiopia.hdf'
     interpolation:
         order: 0
         extrapolate: True
