stratify diability by pregnancy state

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -78,3 +78,6 @@ configuration:
         pregnancy_outcomes:
             include:
             - 'intervention'
+        disability:
+            include:
+            - 'pregnancy'
