--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -31,7 +31,7 @@ components:
 configuration:
     input_data:
         input_draw_number: 0
-        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model8.0/ethiopia.hdf'
+        artifact_path: '/mnt/team/simulation_science/costeffectiveness/artifacts/vivarium_gates_nutrition_optimization/model8.3/ethiopia.hdf'
     interpolation:
         order: 0
         extrapolate: True
@@ -78,3 +78,6 @@ configuration:
         pregnancy_outcomes:
             include:
             - 'intervention'
+        disability:
+            include:
+            - 'pregnancy'
