--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -52,10 +52,10 @@ configuration:
             day: 31
         step_size: 7 # Days
     population:
-        population_size: 10_000
+        population_size: 20_000
         age_start: 10
         age_end: 54
         include_sex: "Female"
     stratification:
         default:
-            - age_group
+            - 'age_group'
