--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -2,9 +2,9 @@ components:
     vivarium_public_health:
         population:
             - BasePopulation()
-        metrics:
-            - DiseaseObserver("maternal_disorders")
-            - DiseaseObserver("maternal_hemorrhage")
+        # metrics:
+        #     - DiseaseObserver("maternal_disorders")
+        #     - DiseaseObserver("maternal_hemorrhage")
 
     vivarium_gates_nutrition_optimization:
         components:
@@ -20,12 +20,12 @@ components:
             - MaternalInterventions()
             - ResultsStratifier()
             - PregnancyObserver()
-            - PregnancyOutcomeObserver()
+            # - PregnancyOutcomeObserver()
             - BirthRecorder()
             - MaternalMortalityObserver()
             - DisabilityObserver()
-            - AnemiaObserver()
-            - MaternalBMIObserver()
+            # - AnemiaObserver()
+            # - MaternalBMIObserver()
             - MaternalInterventionObserver()
 
 configuration:
@@ -52,32 +52,10 @@ configuration:
             day: 31
         step_size: 7 # Days
     population:
-        population_size: 10_000
+        population_size: 20_000
         age_start: 10
         age_end: 54
         include_sex: "Female"
-
     stratification:
         default:
             - 'age_group'
-        pregnancy:
-            include:
-            - 'pregnancy_outcome'
-        anemia:
-            include:
-            - 'pregnancy'
-        maternal_disorders:
-            include:
-            - 'anemia_status_at_birth'
-        maternal_hemorrhage:
-            include:
-            - 'anemia_status_at_birth'
-        maternal_bmi:
-            include:
-            - 'pregnancy'
-        pregnancy_outcomes:
-            include:
-            - 'intervention'
-        disability:
-            include:
-            - 'pregnancy'
