model reflects current status

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -10,9 +10,9 @@ components:
         components:
             - Pregnancy()
             - UntrackNotPregnant()
-            # - MaternalDisorders()
-            # - MaternalHemorrhage()
-            # - MaternalMortality()
+            - MaternalDisorders()
+            - MaternalHemorrhage()
+            - MaternalMortality()
             # - BackgroundMorbidity()
             # - Hemoglobin()
             # - Anemia()
