--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -13,7 +13,7 @@ components:
             - MaternalDisorders()
             - MaternalHemorrhage()
             - MaternalMortality()
-            # - BackgroundMorbidity()
+            - BackgroundMorbidity()
             # - Hemoglobin()
             # - Anemia()
             # - MaternalBMIExposure()
