remove newchildren columns created

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -10,23 +10,23 @@ components:
         components:
             - Pregnancy()
             - UntrackNotPregnant()
-            - MaternalDisorders()
-            - MaternalHemorrhage()
-            - MaternalMortality()
-            - BackgroundMorbidity()
-            - Hemoglobin()
-            - Anemia()
-            - MaternalBMIExposure()
-            - MaternalInterventions()
-            - ResultsStratifier()
-            - PregnancyObserver()
+            # - MaternalDisorders()
+            # - MaternalHemorrhage()
+            # - MaternalMortality()
+            # - BackgroundMorbidity()
+            # - Hemoglobin()
+            # - Anemia()
+            # - MaternalBMIExposure()
+            # - MaternalInterventions()
+            # - ResultsStratifier()
+            # - PregnancyObserver()
             # - PregnancyOutcomeObserver()
-            - BirthRecorder()
-            - MaternalMortalityObserver()
-            - DisabilityObserver()
+            # - BirthRecorder()
+            # - MaternalMortalityObserver()
+            # - DisabilityObserver()
             # - AnemiaObserver()
             # - MaternalBMIObserver()
-            - MaternalInterventionObserver()
+            # - MaternalInterventionObserver()
 
 configuration:
     input_data:
