--- a/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
@@ -7,6 +7,6 @@ branches:
         - 'zero_coverage'
         - 'baseline'
         - 'mms'
-        - 'universal_bep'
+        - 'ifa'
         - 'targeted_bep_no_mms'
         - 'targeted_bep_mms'
