update model spec

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -2,9 +2,9 @@ components:
     vivarium_public_health:
         population:
             - BasePopulation()
-        metrics:
-            - DiseaseObserver("maternal_disorders")
-            - DiseaseObserver("maternal_hemorrhage")
+#        metrics:
+#            - DiseaseObserver("maternal_disorders")
+#            - DiseaseObserver("maternal_hemorrhage")
 
     vivarium_gates_nutrition_optimization:
         components:
@@ -24,7 +24,7 @@ components:
             - BirthRecorder()
             - MaternalMortalityObserver()
             - DisabilityObserver()
-            - AnemiaObserver()
+            # - AnemiaObserver()
             # - MaternalBMIObserver()
             - MaternalInterventionObserver()
 
@@ -59,18 +59,3 @@ configuration:
     stratification:
         default:
             - 'age_group'
-        disability:
-            include: 
-               - 'pregnancy'
-        maternal_disorders:
-            include: 
-               - 'anemia_status_at_birth'
-        maternal_hemorrhage:
-            include: 
-               - 'anemia_status_at_birth'
-        anemia:
-            include: 
-               - 'pregnancy'
-        pregnancy:
-            include: 
-               - 'pregnancy_outcome'
