comment out targeted BEP/IFA scenario

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
@@ -8,5 +8,5 @@ branches:
         - 'baseline'
         - 'mms'
         - 'ifa'
-        - 'targeted_bep_ifa'
+        #- 'targeted_bep_ifa'
         - 'targeted_bep_mms'
