Final maternal production runs (#77)
    Category: runs
    JIRA issue: MIC-4779

Changes and notes
Update targeted BEP/IFA scenario and include both targeted BEP scenarios.

Verification and Testing
Used breakpoint to verify that simulants with low BMI were assigned BEP and those with adequate BMI were assigned IFA in the updated scenario.

--- a/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/branches/scenarios.yaml
@@ -1,4 +1,4 @@
-input_draw_count: 1
+input_draw_count: 20
 random_seed_count: 80
 
 branches:
@@ -8,3 +8,5 @@ branches:
         - 'baseline'
         - 'mms'
         - 'ifa'
+        #- 'targeted_bep_ifa'
+        - 'targeted_bep_mms'
