--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # default owners
-* @albrja @hussain-jafari @rmudambi @stevebachmeier @patricktnast
+* @albrja @hussain-jafari @patricktnast @rmudambi @stevebachmeier
