--- a/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
+++ b/src/vivarium_gates_nutrition_optimization/model_specifications/model_spec.yaml
@@ -53,8 +53,8 @@ configuration:
         step_size: 7 # Days
     population:
         population_size: 20_000
-        age_start: 10
-        age_end: 54
+        initialization_age_min: 10
+        initialization_age_max: 54
         include_sex: "Female"
     stratification:
         default:
